starting with home page
added polling functions infra

--- a/client/device.html
+++ b/client/device.html
@@ -1,5 +1,5 @@
 <template name="device">
-  <form class="form-left" id="access-token-form">
+  <form class="align-left" id="access-token-form">
     <div class="form-group">
       <label for="access-token-input">Access token</label>
       <div class="row">
